responsive and layout problems fixed.

--- a/docs/site/src/app/pages/docs-layout/docs-layout.component.scss
+++ b/docs/site/src/app/pages/docs-layout/docs-layout.component.scss
@@ -61,6 +61,7 @@
 
     mat-sidenav-content {
       ::ng-deep {
+
         app-doc,
         app-doc-list {
           flex: 1;
@@ -75,25 +76,6 @@
     flex: 1 1 auto;
   }
 
-  // Added:
-  @media screen and (max-width: 1280px) {
-    mat-sidenav-container {
-      &.handset {
-        margin: 0 !important;
-      }
 
-      mat-sidenav {
-        &.mat-drawer {
-          position: absolute;
-          left: 0;
-        }
-      }
-    }
-  }
 
-  @media screen and (min-width: 600px) {
-    .nav-mobile {
-      visibility: hidden !important;
-    }
-  }
 }
